# ResInsight

./: .codespell-ignore  .codespellrc  .gitignore  .gitmodules  .misspell-fixer.ignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_FLOW_ANALYSIS.md  COMPLETE_SUMMARY.md  OpenTelemetry_Integration_Plan.md  PROGRESS_INFO_IMPROVEMENTS.md  PR_SUMMARY.md  README.md  ResInsightVersion.cmake  VALIDATION_FIX_VERIFICATION.md  index.html  msj test.txt  opentelemetry_config_example.json  search.md  test_validation_example.cpp  vcpkg-configuration.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: AppFwkUnitTest.yml  ResInsightWithCache.yml  bump_dev_version.yml  centos7.yml  centos7_cache.yml  clang-format.yml  clang-tidy.yml  close-label.yml  cmake-format.yml  codesee-arch-diagram.yml  delete_artifacts.yml  hosted-pure-workflow.yml  main.yml  msvc-code-analysis-action.yml  python-linting.yml  spell-check-pr.yml  spell-check.yml  update-submodules.yml
ApplicationCode/: .misspell-fixer.ignore
ApplicationCode/Commands/: RicThemeColorEditorFeature.cpp
ApplicationCode/FileInterface/: RifEclipseOutputFileTools.cpp
ApplicationCode/ProjectDataModel/: Rim3dView.cpp  Rim3dView.h  RimGridView.cpp  RimGridView.h  RimSummaryCalculationCollection.cpp
ApplicationCode/ReservoirDataModel/: RigCaseCellResultsData.cpp  RigGeoMechWellLogExtractor.cpp  RigGridBase.cpp  RigLasFileExporter.cpp  RigMainGrid.cpp  RigWellLogFile.cpp
ApplicationCode/SocketInterface/: RiaPropertyDataCommands.cpp
ApplicationCode/UserInterface/: RiuFemResultTextBuilder.cpp  RiuMultiPlotBook.cpp
ApplicationExeCode/: CMakeLists.txt  RiaMain.cpp  RiaMainTools.cpp
ApplicationExeCode/Resources/: ResInsight.qrc
ApplicationLibCode/: .clang-tidy  CMakeLists.txt  CustomPCH.cmake  Doxyfile
ApplicationLibCode/Adm/: LicenseInformation.txt
ApplicationLibCode/Application/: CMakeLists_files.cmake  RiaApplication.cpp  RiaConsoleApplication.cpp  RiaDefines.cpp  RiaDefines.h  RiaFontCache.cpp  RiaGridDefines.cpp  RiaGridDefines.h  RiaGuiApplication.cpp  RiaGuiApplication.h  RiaMemoryCleanup.cpp  RiaMemoryCleanup.h  RiaModelExportDefines.cpp  RiaModelExportDefines.h  RiaPlotDefines.cpp  RiaPlotDefines.h  RiaPlotWindowRedrawScheduler.cpp  RiaPreferences.cpp  RiaPreferences.h  RiaPreferencesGeoMech.cpp  RiaPreferencesGrid.cpp  RiaPreferencesGrid.h  RiaPreferencesOpenTelemetry.cpp  RiaPreferencesOpenTelemetry.h  RiaPreferencesOpm.cpp  RiaPreferencesOpm.h  RiaPreferencesOsdu.cpp  RiaPreferencesOsdu.h  RiaPreferencesSummary.cpp  RiaPreferencesSummary.h  RiaPreferencesSumo.cpp  RiaPreferencesSystem.cpp  RiaPreferencesSystem.h  RiaQuickAccessScheduler.cpp  RiaResultNames.cpp  RiaResultNames.h  RiaRftPltCurveDefinition.cpp
ApplicationLibCode/AzureOtelClient/: CMakeLists.txt  RiaAzureOtelClient.cpp
ApplicationLibCode/ResultStatisticsCache/: CMakeLists.txt  RigStatisticsDataCache.cpp  RigStatisticsDataCache.h  RigStatisticsMath.cpp  RigStatisticsMath.h
Examples/Cpp26Reflection/: CMakeLists.txt  README.md  reflection_example.cpp
Fwk/: CMakeLists.txt
Fwk/AppFwk/CommonCode/CommonCode_UnitTest/: CMakeLists.txt  CommonCode_UnitTests_main.cpp  cafAngleUtilsTest.cpp  cafVecIjkTest.cpp  cvfCellRangeTest.cpp  cvfStructGridTest.cpp
Fwk/AppFwk/CommonCode/CommonCode_UnitTests/: CMakeLists.txt  cafVecIjk-Test.cpp  cvfCellRange-Test.cpp  cvfCellRangeFilter-Test.cpp  cvfStructGrid-Test.cpp  cvfStructGridDefines-Test.cpp
Fwk/AppFwk/cafTests/cafTestApplication/: ApplicationEnum.cpp  ApplicationEnum.h  CMakeLists.txt  LabelsAndHyperlinks.cpp  LabelsAndHyperlinks.h  LineEditAndPushButtons.cpp  MainWindow.cpp  MainWindow.h  ManyGroups.cpp  ManyGroups.h  RimFontSize.cpp  RimFontSize.h  TamComboBox.cpp  ValidationTest.cpp  ValidationTest.h  VariableServer.cpp  VariableServer.h
Fwk/AppFwk/cafUserInterface/cafUserInterface_UnitTests/: CMakeLists.txt  cafPdmUiTreeViewModelTest.cpp  cafProgressInfoTest.cpp  cafUserInterface_UnitTests.cpp
GrpcInterface/: .clang-format  CMakeLists.txt  RiaGrpcActiveCellInfoStateHandler.cpp  RiaGrpcActiveCellInfoStateHandler.h  RiaGrpcCaseService.cpp  RiaGrpcCaseService.h  RiaGrpcGridService.cpp  RiaGrpcHelper.cpp  RiaGrpcPdmObjectService.cpp  RiaGrpcSelectedCellsStateHandler.cpp  RiaGrpcSelectedCellsStateHandler.h  RiaGrpcSimulationWellService.cpp  RiaGrpcSimulationWellService.h  RiaGrpcWellPathService.cpp  RiaGrpcWellPathService.h  RiaWellPathDataToGrpcConverter.cpp  RiaWellPathDataToGrpcConverter.h
TestModels/: Documenetation.rsp
_data/: docs.yml  project.yml
_includes/: ceesol-nav-items.html  docs_contents.html  header.html  primary-nav-items.html  releasenotes_ul.html
_posts/: 2017-05-31-resinsight-2017.05-released.md  2018-05-18-resinsight-2018-05-released.md  2018-11-28-resinsight-2018.11-released.md  2018-12-20-resinsight-2018.11.1-released.md  2018-12-21-resinsight-2018.11.1-released.md  2019-04-26-resinsight-2019.04-released.md
doc/: ProgressInfoDesign.md  ProgressInfoExamples.md  ProgressInfoImprovements.md  ResInsightHeadlessSnapshots.txt  spell-checking.md
docs/: 3dWellLogCurves.md  3dWellLogPlots  3dWellLogPlots.md  Annotations.md  BuildInstructions.md  CarfinExport.md  CaseGroupsAndStatistics.md  CellResults.md  CommandFile.md  CommandLineInterface.md  CommandLineParameters.md  CompletionExport.md  Completions.md  CompletionsLGR.md  ContourMaps.md  CreateNewWellPaths.md  CurveCalculator.md  DerivedResults.md  ElementPropertyTableImport.md  EnsemblePlotting.md  ExportEclipseProperties.md  ExportFluxnumMultnum.md  ExportSectorModel.md  ExportWellPaths.md  Faults.md  Filters.md  FlowDiagnosticsPlots.md  Formations.md  GettingStarted.md  GridCrossPlots.md  GridImportExport.md  GridStatisticsDialog.md  Home.md  ImportObsTimeHistData.md  ImportObservedTimeHistoryData.md  Installation.md  InstallationLinux.md  Intersections.md  LatexEquations.txt  LinkedViews.md  (+34 more)
js/: search.js
news/: index.html
project/: about.md  download.md  releasenotification.md  support.md
releasenotes/: releasenotes_2018_11.md  releasenotes_2019_04.md
scripts/: clang-build.ps1
(+1799 files in other folders)
